--- a/chanel/styles.css
+++ b/chanel/styles.css
@@ -1,22 +1,26 @@
-
-
 .cuerpo{
     display: flex;
     flex-direction: column;
-    width: 500px;
-    height: 500px;
+    width: 600px;
+    height: 600px;
+    background-color: aliceblue;
+    justify-content: center;
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px ;
+    
 }
 
 .padre{
     display: flex;
-    width: 500px;
-    height: 500px;
-    margin-left: 400px;
-    margin-right: 500px;
+    width: 700px;
+    height: 600px;
     justify-content: space-between;
     display: flex;
     flex-direction: row;
-    
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px ;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 img{
@@ -24,32 +28,49 @@ img{
     height: 600px;
     display: flex;
     flex-direction: column;
-    border-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius:20px ;
+    margin-left: 400px;
+    
 }
 
-h3{
+h4{
     margin-left: 30px;
     font-family: 'Roboto Condensed', sans-serif;
 }
 
-h2{
+h3{
     margin-left: 30px;
     font-family: 'Cormorant Garamond', serif;
+    margin-right: 30px;
 }
 
 h1{
     margin-left: 30px;
     font-family: 'Cormorant Garamond', serif;
+    margin-right: 30px;
 }
 
 .precio{
     color: darkolivegreen;
+    font-family: 'Cormorant Garamond', serif;
+    display: flex;
+    flex-direction: row;
 }
 
 button{
     margin-left: 30px;
     border-radius: 10px;
-    background-color: black;
+    background-color: seagreen;
     color: aliceblue;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Cormorant Garamond', serif;
+    border-color: seagreen;
+    width: 300px;
+    height: 50px;
+    margin-right: 30px;
+
+}
+
+body{
+    background-color: bisque;
 }
