--- a/chanel/styles.css
+++ b/chanel/styles.css
@@ -53,7 +53,7 @@ h1{
 
 .precio{
     color: darkolivegreen;
-    font-family: 'Cormorant Garamond', serif;
+    font-family: 'Ultra', serif;
     display: flex;
     flex-direction: row;
 }
@@ -63,7 +63,7 @@ button{
     border-radius: 10px;
     background-color: seagreen;
     color: aliceblue;
-    font-family: 'Cormorant Garamond', serif;
+    font-family: 'Roboto Condensed', sans-serif;
     border-color: seagreen;
     width: 300px;
     height: 50px;
